--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2513,10 +2513,6 @@ between variables.
 as above, as well as assignments ${\tt let}\ x = M\ {\tt in}$ inside
 conditions of {\tt find}. 
 
-\item \texttt{remove\string_assign all}: remove all assignments,
-by replacing variables with their values. This is not recommended:
-you should try to specify which assignments to remove more precisely.
-
 \item $\texttt{remove\string_assign binder}\ x_1\ \dots\ x_n$: remove assignments
 to $x_1, \ldots, x_n$ by replacing $x_i$ with its value. When $x_i$ becomes unused,
 its definition is removed. When $x_i$ is used only in \texttt{defined} 
@@ -2667,13 +2663,18 @@ In this case, it designates all variables that match the regular expression,
 and the command \texttt{SArename} is executed for each of these variables in
 turn.
 
+\item $\texttt{SArename new}$: Renames all variables defined by \texttt{new}
+  (or \texttt{<-R}) that have several definitions and no array accesses
+  to distinct names.
+  
 \item \texttt{all\string_simplify}: perform several simplifications 
 on the game, as if 
 \begin{itemize}
 \item \texttt{simplify}, 
 \item \texttt{move all} if \texttt{autoMove = true}, 
 \item \texttt{remove\string_assign useless} if \texttt{autoRemoveAssignFindCond = false}, \\
-\texttt{remove\string_assign findcond} if \texttt{autoRemoveAssignFindCond = true},
+  \texttt{remove\string_assign findcond} if \texttt{autoRemoveAssignFindCond = true},
+\item \texttt{SArename new} if \texttt{autoSARename = true},
 \item and \texttt{merge\string_branches} if \texttt{autoMergeBranches = true}
 \end{itemize}
 had been called.
