--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -3044,7 +3044,7 @@ if such a proof is still required.
 proved in the current game. If yes, display the proof and stop.
 Otherwise, wait for further instructions.
 
-\item \texttt{success simplify}: run \texttt{success} then \texttt{simplify}, with the following addition. The command \texttt{success} collects information that is known to be true when the adversary manages to break at least one of the desired properties. The first iteration of \texttt{simplify} removes parts of the game that contradict this information and replaces them with \texttt{event adv\_loses}.
+\item \texttt{success simplify}: run \texttt{success} then \texttt{simplify}, with the following addition. The command \texttt{success} collects information that is known to be true when the adversary manages to break at least one of the desired properties. The first iteration of \texttt{simplify} removes parts of the game that contradict this information and replaces them with \texttt{event\_abort adv\_loses}.
 
 \item \texttt{show\string_game}: display the current game.
 
