--- a/CHANGES
+++ b/CHANGES
@@ -12,11 +12,13 @@ Version
 - As a consequence, removed setting allowUnprovedUnique.
 - Removed command "remove_assign all", useless in practice.
 - New command "SArename random", previously included in "remove_assign".
+- Use program points more often in the collection of true facts,
+  in addition or instead of defined variables.
 - Display a warning when correspondence queries do not satisfy a
   well-formedness condition (the conclusion of the correspondence must
   be uniquely determined given the events in the hypothesis).
 - Display probability when one-session secrecy is proved.
-- Double the probabilities earlier for (one-session) secrecy.
+- No need to double the probabilities in "success" for (one-session) secrecy.
 - Fixed bugs related to the fact that terms may abort.
 - Fixed bugs in success simplify: minor precision improvement
   with query event(e(M)) ==> false; when distinguishing cases in
