--- a/docs/biblio.bib
+++ b/docs/biblio.bib
@@ -8582,6 +8582,16 @@ opturl="https://doi.org/10.1007/978-3-642-04444-1_21"
   month =	 nov
 }
 
+@InProceedings{Moni89,
+  author = 	 {Moni Naor and Moti Yung},
+  title = 	 {Universal One-Way Hash Functions and their Cryptographic Applications},
+  booktitle = {STOC '89: Proceedings of the twenty-first annual ACM symposium on Theory of computing},
+  year = 	 1989,
+  pages = 	 {33--43},
+  month = 	 feb,
+  publisher = acmpress
+}
+
 @INPROCEEDINGS{Monniaux00,
   AUTHOR = {David Monniaux},
   TITLE = {Abstract Interpretation of Probabilistic Semantics},
