--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -1421,6 +1421,35 @@ The interface is the same as for fixed second-preimage-resistant hash functions 
 
 $\texttt{expand FixedPreimageResistant\_hash\_all\_args(}\vn{hashinput}, \vn{hashoutput}, \vn{hash}, \vn{hash}', \vn{Phash}\texttt{).}$ is similar, with an additional argument $\vn{hash}'$, which is a symbol that replaces $\vn{hash}$ after game transformation.
 
+\item $\texttt{expand UniversalOneWay\_hash(}\vn{key}, \vn{hashinput}, \vn{hashoutput}, \vn{hash}, \vn{hashoracle}, \vn{Phash}\texttt{).}$
+defines a universal one-way hash function~\cite{Moni89}.
+
+   $\vn{key}$ is the type of the key of the hash function, must be \texttt{bounded} or \texttt{nonuniform}, typically \texttt{fixed}.
+
+   $\vn{hashinput}$ is the type of the input of the hash function.
+
+   $\vn{hashoutput}$ is the type of the output of the hash function.
+
+   $\vn{hash}(\vn{key}, \vn{hashinput}): \vn{hashoutput}$ is the hash function.
+
+$\vn{hashoracle}$ is a process that leaks the key that it receives as argument.
+   WARNING: A (family of) universal one-way hash function(s) is a keyed hash
+   function.  The key must be made available to the adversary, for
+   instance by including the process $\vn{hashoracle}(\vn{hk})$, where
+   $\vn{hk}$ is the key. The key is often generated once and for all
+   at the beginning of the game, and immediately made available to the
+   adversary.
+
+   $\vn{Phash}(t)$ is the probability of breaking collision resistance,
+   for an adversary that runs in time at most $t$. ($t$ is the time
+   since the choice of the hash function, that is, of the key $\vn{hk}$.)
+
+   The types $\vn{key}$, $\vn{hashinput}$, and $\vn{hashoutput}$ and
+   the probability $\vn{Phash}$ must be declared before this macro.
+   The function $\vn{hash}$ and the process $\vn{hashoracle}$ are
+   defined by this macro. They must not be declared elsewhere, and
+   they can be used only after expanding the macro.
+
   \item Similarly to the macros above, for $N$ from 1 to 10, the macros\\
    $\texttt{expand ROM\_hash\_$N$(}\vn{key}, \vn{hashinput1}, \dots, \vn{hashinput}N, \vn{hashoutput}, \vn{hash}, \vn{hashoracle}, \vn{qH}\texttt{).}$\\
    $\texttt{expand ROM\_hash\_large\_$N$(}\vn{key}, \vn{hashinput1}, \dots, \vn{hashinput}N, \vn{hashoutput}, \vn{hash}, \vn{hashoracle}, \vn{qH}\texttt{).}$\\
@@ -1435,6 +1464,7 @@ $\texttt{expand FixedPreimageResistant\_hash\_all\_args(}\vn{hashinput}, \vn{has
    $\texttt{expand HiddenKeyPreimageResistant\_hash\_all\_args\_$N$(}\vn{key}$, $\vn{hashinput1}$, \dots, $\vn{hashinput}N$, $\vn{hashoutput}$, $\vn{hash}$, $\vn{hash}'$, $\vn{hashoracle}$, $\vn{qH}$, $\vn{Phash}\texttt{).}$\\
    $\texttt{expand FixedPreimageResistant\_hash\_$N$(}\vn{hashinput1}$, \dots, $\vn{hashinput}N$, $\vn{hashoutput}$, $\vn{hash}$, $\vn{Phash}\texttt{).}$\\
    $\texttt{expand FixedPreimageResistant\_hash\_all\_args\_$N$(}\vn{hashinput1}$, \dots, $\vn{hashinput}N$, $\vn{hashoutput}$, $\vn{hash}$, $\vn{hash}'$, $\vn{Phash}\texttt{).}$\\
+   $\texttt{expand UniversalOneWay\_hash\_$N$(}\vn{key}$, $\vn{hashinput1}$, \dots, $\vn{hashinput}N$, $\vn{hashoutput}$, $\vn{hash}$, $\vn{hashoracle}$, $\vn{Phash}\texttt{).}$\\
    define hash functions with $N$ arguments, with the same properties as above.
 
    $\vn{hashinput1}$, \dots, $\vn{hashinput}N$ are the types of the inputs of the hash function and
